CSFML/include/Window/Event.h

typedef struct
{
    int type;
    sfKeyCode code;
    sfBool alt;
    sfBool control;
    sfBool shift;
    sfBool system;
} sfKeyEvent;
typedef struct
{
    int type;
    sfUint32 unicode;
} sfTextEvent;
typedef struct
{
    int type;
    int x;
    int y;
} sfMouseMoveEvent;
typedef struct
{
    int type;
    sfMouseButton button;
    int x;
    int y;
} sfMouseButtonEvent;
typedef struct
{
    int type;
    sfMouseWheel wheel;
    float delta;
    int x;
    int y;
} sfMouseWheelScrollEvent;
typedef struct
{
    int type;
    unsigned int joystickId;
    sfJoystickAxis axis;
    float position;
} sfJoystickMoveEvent;
typedef struct
{
    int type;
    unsigned int joystickId;
    unsigned int button;
} sfJoystickButtonEvent;
typedef struct
{
    int type;
    unsigned int joystickId;
} sfJoystickConnectEvent;
typedef struct
{
    int type;
    unsigned int width;
    unsigned int height;
} sfSizeEvent;
typedef struct
{
    int type;
    unsigned int finger;
    int x;
    int y;
} sfTouchEvent;
typedef struct
{
    int type;
    sfSensorType sensorType;
    float x;
    float y;
    float z;
} sfSensorEvent;
typedef union {
    int type;                                 ///< Type of the event
    sfSizeEvent size;                         ///< Size event parameters
    sfKeyEvent key;                           ///< Key event parameters
    sfTextEvent text;                         ///< Text event parameters
    sfMouseMoveEvent mouseMove;               ///< Mouse move event parameters
    sfMouseButtonEvent mouseButton;           ///< Mouse button event parameters
    sfMouseWheelScrollEvent mouseWheelScroll; ///< Mouse wheel event parameters
    sfJoystickMoveEvent joystickMove;         ///< Joystick move event parameters
    sfJoystickButtonEvent joystickButton;     ///< Joystick button event parameters
    sfJoystickConnectEvent joystickConnect;   ///< Joystick (dis)connect event parameters
    sfTouchEvent touch;                       ///< Touch events parameters
    sfSensorEvent sensor;                     ///< Sensor event parameters
} sfEvent;