ffi/csfml-window-sys/src/lib.rs

#[test]
fn bindgen_test_layout_sfJoystickMoveEvent() {
    assert_eq!(
        ::std::mem::size_of::<sfJoystickMoveEvent>(),
        16usize,
        concat!("Size of: ", stringify!(sfJoystickMoveEvent))
    );
    assert_eq!(
        ::std::mem::align_of::<sfJoystickMoveEvent>(),
        4usize,
        concat!("Alignment of ", stringify!(sfJoystickMoveEvent))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfJoystickMoveEvent>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfJoystickMoveEvent),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfJoystickMoveEvent>())).joystickId as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sfJoystickMoveEvent),
            "::",
            stringify!(joystickId)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfJoystickMoveEvent>())).axis as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sfJoystickMoveEvent),
            "::",
            stringify!(axis)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfJoystickMoveEvent>())).position as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(sfJoystickMoveEvent),
            "::",
            stringify!(position)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct sfJoystickButtonEvent {
    pub type_: sfEventType,
    pub joystickId: ::std::os::raw::c_uint,
    pub button: ::std::os::raw::c_uint,
}
#[test]
fn bindgen_test_layout_sfJoystickButtonEvent() {
    assert_eq!(
        ::std::mem::size_of::<sfJoystickButtonEvent>(),
        12usize,
        concat!("Size of: ", stringify!(sfJoystickButtonEvent))
    );
    assert_eq!(
        ::std::mem::align_of::<sfJoystickButtonEvent>(),
        4usize,
        concat!("Alignment of ", stringify!(sfJoystickButtonEvent))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfJoystickButtonEvent>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfJoystickButtonEvent),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sfJoystickButtonEvent>())).joystickId as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sfJoystickButtonEvent),
            "::",
            stringify!(joystickId)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfJoystickButtonEvent>())).button as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sfJoystickButtonEvent),
            "::",
            stringify!(button)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct sfJoystickConnectEvent {
    pub type_: sfEventType,
    pub joystickId: ::std::os::raw::c_uint,
}
#[test]
fn bindgen_test_layout_sfJoystickConnectEvent() {
    assert_eq!(
        ::std::mem::size_of::<sfJoystickConnectEvent>(),
        8usize,
        concat!("Size of: ", stringify!(sfJoystickConnectEvent))
    );
    assert_eq!(
        ::std::mem::align_of::<sfJoystickConnectEvent>(),
        4usize,
        concat!("Alignment of ", stringify!(sfJoystickConnectEvent))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfJoystickConnectEvent>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfJoystickConnectEvent),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sfJoystickConnectEvent>())).joystickId as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sfJoystickConnectEvent),
            "::",
            stringify!(joystickId)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct sfSizeEvent {
    pub type_: sfEventType,
    pub width: ::std::os::raw::c_uint,
    pub height: ::std::os::raw::c_uint,
}
#[test]
fn bindgen_test_layout_sfSizeEvent() {
    assert_eq!(
        ::std::mem::size_of::<sfSizeEvent>(),
        12usize,
        concat!("Size of: ", stringify!(sfSizeEvent))
    );
    assert_eq!(
        ::std::mem::align_of::<sfSizeEvent>(),
        4usize,
        concat!("Alignment of ", stringify!(sfSizeEvent))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfSizeEvent>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfSizeEvent),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfSizeEvent>())).width as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sfSizeEvent),
            "::",
            stringify!(width)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfSizeEvent>())).height as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sfSizeEvent),
            "::",
            stringify!(height)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct sfTouchEvent {
    pub type_: sfEventType,
    pub finger: ::std::os::raw::c_uint,
    pub x: ::std::os::raw::c_int,
    pub y: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_sfTouchEvent() {
    assert_eq!(
        ::std::mem::size_of::<sfTouchEvent>(),
        16usize,
        concat!("Size of: ", stringify!(sfTouchEvent))
    );
    assert_eq!(
        ::std::mem::align_of::<sfTouchEvent>(),
        4usize,
        concat!("Alignment of ", stringify!(sfTouchEvent))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfTouchEvent>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfTouchEvent),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfTouchEvent>())).finger as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sfTouchEvent),
            "::",
            stringify!(finger)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfTouchEvent>())).x as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sfTouchEvent),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfTouchEvent>())).y as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(sfTouchEvent),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialOrd, PartialEq)]
pub struct sfSensorEvent {
    pub type_: sfEventType,
    pub sensorType: sfSensorType,
    pub x: f32,
    pub y: f32,
    pub z: f32,
}
#[test]
fn bindgen_test_layout_sfSensorEvent() {
    assert_eq!(
        ::std::mem::size_of::<sfSensorEvent>(),
        20usize,
        concat!("Size of: ", stringify!(sfSensorEvent))
    );
    assert_eq!(
        ::std::mem::align_of::<sfSensorEvent>(),
        4usize,
        concat!("Alignment of ", stringify!(sfSensorEvent))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfSensorEvent>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfSensorEvent),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfSensorEvent>())).sensorType as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sfSensorEvent),
            "::",
            stringify!(sensorType)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfSensorEvent>())).x as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sfSensorEvent),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfSensorEvent>())).y as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(sfSensorEvent),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfSensorEvent>())).z as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sfSensorEvent),
            "::",
            stringify!(z)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union sfEvent {
    pub type_: sfEventType,
    pub size: sfSizeEvent,
    pub key: sfKeyEvent,
    pub text: sfTextEvent,
    pub mouseMove: sfMouseMoveEvent,
    pub mouseButton: sfMouseButtonEvent,
    pub mouseWheel: sfMouseWheelEvent,
    pub mouseWheelScroll: sfMouseWheelScrollEvent,
    pub joystickMove: sfJoystickMoveEvent,
    pub joystickButton: sfJoystickButtonEvent,
    pub joystickConnect: sfJoystickConnectEvent,
    pub touch: sfTouchEvent,
    pub sensor: sfSensorEvent,
    _bindgen_union_align: [u32; 6usize],
}
